--- a/implementations/ometa-js/package.json
+++ b/implementations/ometa-js/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "ometajs": "~3.2.4",
-    "ometa-js": "~1.0.3"
+    "ometa-js": "~1.0.3",
+    "flaw": "~0.1.0",
+    "boo": "~2.0.0"
   }
 }
