Renames package to liz-language.

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "liz",
+  "name": "liz-language",
   "description": "A minimal Lisp/Kernel dialect.",
   "version": "0.1.0",
-  "bin": "./bin/liz",
+  "bin": { "liz": "./bin/liz" },
   "dependencies": {
     "ometajs": "~3.2.4",
     "flaw": "~0.1.0",
